styled landing page, responsive design, fixed login page for dark mode

--- a/client/src/app/auth/login/styles/responsive.scss
+++ b/client/src/app/auth/login/styles/responsive.scss
@@ -63,3 +63,7 @@ ion-content {
   @include hide-scrollbars();
   --overflow: hidden;
 }
+
+.let-overflow {
+  --overflow: visible!important;
+}
